--- a/Ensemble—cookbook/1—overview.ipynb
+++ b/Ensemble—cookbook/1—overview.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.687041Z",
-     "start_time": "2022-07-05T23:32:37.432859Z"
+     "end_time": "2022-07-05T23:59:19.088960Z",
+     "start_time": "2022-07-05T23:59:17.845917Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.765171Z",
-     "start_time": "2022-07-05T23:32:38.689607Z"
+     "end_time": "2022-07-05T23:59:19.169002Z",
+     "start_time": "2022-07-05T23:59:19.091899Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.770341Z",
-     "start_time": "2022-07-05T23:32:38.767261Z"
+     "end_time": "2022-07-05T23:59:19.174176Z",
+     "start_time": "2022-07-05T23:59:19.171180Z"
     }
    },
    "outputs": [],
@@ -60,8 +60,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.776430Z",
-     "start_time": "2022-07-05T23:32:38.773153Z"
+     "end_time": "2022-07-05T23:59:19.181522Z",
+     "start_time": "2022-07-05T23:59:19.177604Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.784781Z",
-     "start_time": "2022-07-05T23:32:38.778187Z"
+     "end_time": "2022-07-05T23:59:19.188169Z",
+     "start_time": "2022-07-05T23:59:19.183921Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.810838Z",
-     "start_time": "2022-07-05T23:32:38.786398Z"
+     "end_time": "2022-07-05T23:59:19.221992Z",
+     "start_time": "2022-07-05T23:59:19.190457Z"
     }
    },
    "outputs": [],
@@ -106,8 +106,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.882565Z",
-     "start_time": "2022-07-05T23:32:38.812708Z"
+     "end_time": "2022-07-05T23:59:19.325716Z",
+     "start_time": "2022-07-05T23:59:19.224950Z"
     }
    },
    "outputs": [
@@ -1465,8 +1465,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.889107Z",
-     "start_time": "2022-07-05T23:32:38.884955Z"
+     "end_time": "2022-07-05T23:59:19.333606Z",
+     "start_time": "2022-07-05T23:59:19.327827Z"
     }
    },
    "outputs": [
@@ -1490,8 +1490,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:38.903333Z",
-     "start_time": "2022-07-05T23:32:38.891648Z"
+     "end_time": "2022-07-05T23:59:19.342595Z",
+     "start_time": "2022-07-05T23:59:19.335547Z"
     }
    },
    "outputs": [
@@ -1596,8 +1596,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.033992Z",
-     "start_time": "2022-07-05T23:32:38.907061Z"
+     "end_time": "2022-07-05T23:59:19.533848Z",
+     "start_time": "2022-07-05T23:59:19.346316Z"
     }
    },
    "outputs": [
@@ -2151,8 +2151,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.040990Z",
-     "start_time": "2022-07-05T23:32:39.036305Z"
+     "end_time": "2022-07-05T23:59:19.540849Z",
+     "start_time": "2022-07-05T23:59:19.536131Z"
     }
    },
    "outputs": [],
@@ -2165,8 +2165,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.048425Z",
-     "start_time": "2022-07-05T23:32:39.042949Z"
+     "end_time": "2022-07-05T23:59:19.550162Z",
+     "start_time": "2022-07-05T23:59:19.543236Z"
     }
    },
    "outputs": [
@@ -2194,13 +2194,13 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.054490Z",
-     "start_time": "2022-07-05T23:32:39.050303Z"
+     "end_time": "2022-07-05T23:59:19.556198Z",
+     "start_time": "2022-07-05T23:59:19.552000Z"
     }
    },
    "outputs": [],
    "source": [
-    "housePricesData['MSSubClass'] = housePricesData[\"MSSubClass\"].astype('object')"
+    "housePricesData.loc[:,'MSSubClass'] = housePricesData.loc[:,\"MSSubClass\"].astype('object')"
    ]
   },
   {
@@ -2208,13 +2208,13 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.062758Z",
-     "start_time": "2022-07-05T23:32:39.056399Z"
+     "end_time": "2022-07-05T23:59:19.563093Z",
+     "start_time": "2022-07-05T23:59:19.557880Z"
     }
    },
    "outputs": [],
    "source": [
-    "housePricesData['OverallCond'] = housePricesData[\"OverallCond\"].astype('object')"
+    "housePricesData.loc[:,'OverallCond'] = housePricesData.loc[:,\"OverallCond\"].astype('object')"
    ]
   },
   {
@@ -2222,13 +2222,13 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.068241Z",
-     "start_time": "2022-07-05T23:32:39.064552Z"
+     "end_time": "2022-07-05T23:59:19.568680Z",
+     "start_time": "2022-07-05T23:59:19.564852Z"
     }
    },
    "outputs": [],
    "source": [
-    "housePricesData['OverallQual'] = housePricesData[\"OverallQual\"].astype('object')"
+    "housePricesData.loc[:,'OverallQual'] = housePricesData.loc[:,\"OverallQual\"].astype('object')"
    ]
   },
   {
@@ -2236,8 +2236,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.230276Z",
-     "start_time": "2022-07-05T23:32:39.072459Z"
+     "end_time": "2022-07-05T23:59:19.636932Z",
+     "start_time": "2022-07-05T23:59:19.570330Z"
     }
    },
    "outputs": [
@@ -3037,8 +3037,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.237065Z",
-     "start_time": "2022-07-05T23:32:39.232814Z"
+     "end_time": "2022-07-05T23:59:19.642349Z",
+     "start_time": "2022-07-05T23:59:19.638945Z"
     }
    },
    "outputs": [
@@ -3059,8 +3059,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.248399Z",
-     "start_time": "2022-07-05T23:32:39.239239Z"
+     "end_time": "2022-07-05T23:59:19.651519Z",
+     "start_time": "2022-07-05T23:59:19.644338Z"
     }
    },
    "outputs": [
@@ -3099,8 +3099,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.256565Z",
-     "start_time": "2022-07-05T23:32:39.250145Z"
+     "end_time": "2022-07-05T23:59:19.657142Z",
+     "start_time": "2022-07-05T23:59:19.653480Z"
     }
    },
    "outputs": [],
@@ -3113,8 +3113,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.263836Z",
-     "start_time": "2022-07-05T23:32:39.258556Z"
+     "end_time": "2022-07-05T23:59:19.664127Z",
+     "start_time": "2022-07-05T23:59:19.659049Z"
     }
    },
    "outputs": [],
@@ -3127,13 +3127,13 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.270857Z",
-     "start_time": "2022-07-05T23:32:39.265732Z"
+     "end_time": "2022-07-05T23:59:19.669841Z",
+     "start_time": "2022-07-05T23:59:19.666271Z"
     }
    },
    "outputs": [],
    "source": [
-    "remodelled_age = current_year - housePricesData[:,'YearRemodAdd']"
+    "remodelled_age = current_year - housePricesData.loc[:,'YearRemodAdd']"
    ]
   },
   {
@@ -3141,8 +3141,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.279668Z",
-     "start_time": "2022-07-05T23:32:39.272596Z"
+     "end_time": "2022-07-05T23:59:19.680307Z",
+     "start_time": "2022-07-05T23:59:19.671849Z"
     }
    },
    "outputs": [],
@@ -3155,8 +3155,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.287104Z",
-     "start_time": "2022-07-05T23:32:39.281792Z"
+     "end_time": "2022-07-05T23:59:19.686314Z",
+     "start_time": "2022-07-05T23:59:19.682206Z"
     }
    },
    "outputs": [],
@@ -3169,8 +3169,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.354636Z",
-     "start_time": "2022-07-05T23:32:39.289027Z"
+     "end_time": "2022-07-05T23:59:19.752390Z",
+     "start_time": "2022-07-05T23:59:19.688117Z"
     },
     "scrolled": true
    },
@@ -4529,8 +4529,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.360818Z",
-     "start_time": "2022-07-05T23:32:39.356857Z"
+     "end_time": "2022-07-05T23:59:19.759051Z",
+     "start_time": "2022-07-05T23:59:19.754482Z"
     }
    },
    "outputs": [],
@@ -4543,8 +4543,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.433346Z",
-     "start_time": "2022-07-05T23:32:39.362755Z"
+     "end_time": "2022-07-05T23:59:19.835653Z",
+     "start_time": "2022-07-05T23:59:19.760923Z"
     },
     "scrolled": false
    },
@@ -5358,8 +5358,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.440281Z",
-     "start_time": "2022-07-05T23:32:39.435754Z"
+     "end_time": "2022-07-05T23:59:19.843838Z",
+     "start_time": "2022-07-05T23:59:19.838195Z"
     }
    },
    "outputs": [],
@@ -5372,8 +5372,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.449737Z",
-     "start_time": "2022-07-05T23:32:39.445521Z"
+     "end_time": "2022-07-05T23:59:19.855231Z",
+     "start_time": "2022-07-05T23:59:19.850855Z"
     }
    },
    "outputs": [
@@ -5414,8 +5414,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.455628Z",
-     "start_time": "2022-07-05T23:32:39.451768Z"
+     "end_time": "2022-07-05T23:59:19.863003Z",
+     "start_time": "2022-07-05T23:59:19.857798Z"
     }
    },
    "outputs": [
@@ -5439,8 +5439,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.464297Z",
-     "start_time": "2022-07-05T23:32:39.457760Z"
+     "end_time": "2022-07-05T23:59:19.874259Z",
+     "start_time": "2022-07-05T23:59:19.865863Z"
     }
    },
    "outputs": [],
@@ -5453,8 +5453,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.471613Z",
-     "start_time": "2022-07-05T23:32:39.468007Z"
+     "end_time": "2022-07-05T23:59:19.881672Z",
+     "start_time": "2022-07-05T23:59:19.877180Z"
     }
    },
    "outputs": [
@@ -5478,8 +5478,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.479008Z",
-     "start_time": "2022-07-05T23:32:39.473506Z"
+     "end_time": "2022-07-05T23:59:19.889110Z",
+     "start_time": "2022-07-05T23:59:19.883556Z"
     }
    },
    "outputs": [
@@ -5503,8 +5503,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.486649Z",
-     "start_time": "2022-07-05T23:32:39.481505Z"
+     "end_time": "2022-07-05T23:59:19.895408Z",
+     "start_time": "2022-07-05T23:59:19.891387Z"
     }
    },
    "outputs": [],
@@ -5517,8 +5517,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.495193Z",
-     "start_time": "2022-07-05T23:32:39.489352Z"
+     "end_time": "2022-07-05T23:59:19.903196Z",
+     "start_time": "2022-07-05T23:59:19.898244Z"
     }
    },
    "outputs": [],
@@ -5531,8 +5531,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.515967Z",
-     "start_time": "2022-07-05T23:32:39.498181Z"
+     "end_time": "2022-07-05T23:59:19.921550Z",
+     "start_time": "2022-07-05T23:59:19.905493Z"
     }
    },
    "outputs": [
@@ -5653,8 +5653,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.524530Z",
-     "start_time": "2022-07-05T23:32:39.517992Z"
+     "end_time": "2022-07-05T23:59:19.937243Z",
+     "start_time": "2022-07-05T23:59:19.923821Z"
     }
    },
    "outputs": [],
@@ -5667,8 +5667,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.533872Z",
-     "start_time": "2022-07-05T23:32:39.526624Z"
+     "end_time": "2022-07-05T23:59:19.947379Z",
+     "start_time": "2022-07-05T23:59:19.940435Z"
     }
    },
    "outputs": [
@@ -5774,8 +5774,8 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.540534Z",
-     "start_time": "2022-07-05T23:32:39.535767Z"
+     "end_time": "2022-07-05T23:59:19.953476Z",
+     "start_time": "2022-07-05T23:59:19.949780Z"
     }
    },
    "outputs": [],
@@ -5788,8 +5788,8 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.547516Z",
-     "start_time": "2022-07-05T23:32:39.542278Z"
+     "end_time": "2022-07-05T23:59:19.961727Z",
+     "start_time": "2022-07-05T23:59:19.955730Z"
     }
    },
    "outputs": [
@@ -5816,8 +5816,8 @@
    "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.557958Z",
-     "start_time": "2022-07-05T23:32:39.549440Z"
+     "end_time": "2022-07-05T23:59:19.974530Z",
+     "start_time": "2022-07-05T23:59:19.964265Z"
     }
    },
    "outputs": [
@@ -5855,8 +5855,8 @@
    "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.562896Z",
-     "start_time": "2022-07-05T23:32:39.559955Z"
+     "end_time": "2022-07-05T23:59:19.979887Z",
+     "start_time": "2022-07-05T23:59:19.977062Z"
     }
    },
    "outputs": [],
@@ -5871,8 +5871,8 @@
    "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.577842Z",
-     "start_time": "2022-07-05T23:32:39.564750Z"
+     "end_time": "2022-07-05T23:59:19.995135Z",
+     "start_time": "2022-07-05T23:59:19.981754Z"
     }
    },
    "outputs": [],
@@ -5888,8 +5888,8 @@
    "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.584297Z",
-     "start_time": "2022-07-05T23:32:39.580164Z"
+     "end_time": "2022-07-05T23:59:20.003219Z",
+     "start_time": "2022-07-05T23:59:19.997551Z"
     }
    },
    "outputs": [
@@ -5913,8 +5913,8 @@
    "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.591112Z",
-     "start_time": "2022-07-05T23:32:39.586293Z"
+     "end_time": "2022-07-05T23:59:20.011632Z",
+     "start_time": "2022-07-05T23:59:20.005684Z"
     }
    },
    "outputs": [
@@ -5951,8 +5951,8 @@
    "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.596551Z",
-     "start_time": "2022-07-05T23:32:39.593272Z"
+     "end_time": "2022-07-05T23:59:20.018142Z",
+     "start_time": "2022-07-05T23:59:20.014515Z"
     }
    },
    "outputs": [],
@@ -5965,8 +5965,8 @@
    "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.604880Z",
-     "start_time": "2022-07-05T23:32:39.598347Z"
+     "end_time": "2022-07-05T23:59:20.026868Z",
+     "start_time": "2022-07-05T23:59:20.020093Z"
     }
    },
    "outputs": [
@@ -5993,8 +5993,8 @@
    "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.610915Z",
-     "start_time": "2022-07-05T23:32:39.606845Z"
+     "end_time": "2022-07-05T23:59:20.034405Z",
+     "start_time": "2022-07-05T23:59:20.028916Z"
     }
    },
    "outputs": [],
@@ -6007,8 +6007,8 @@
    "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:39.996715Z",
-     "start_time": "2022-07-05T23:32:39.613312Z"
+     "end_time": "2022-07-05T23:59:20.452145Z",
+     "start_time": "2022-07-05T23:59:20.037120Z"
     }
    },
    "outputs": [
@@ -6056,8 +6056,8 @@
    "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:40.002521Z",
-     "start_time": "2022-07-05T23:32:39.999032Z"
+     "end_time": "2022-07-05T23:59:20.460432Z",
+     "start_time": "2022-07-05T23:59:20.455313Z"
     }
    },
    "outputs": [],
@@ -6070,8 +6070,8 @@
    "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:40.027388Z",
-     "start_time": "2022-07-05T23:32:40.004489Z"
+     "end_time": "2022-07-05T23:59:20.473014Z",
+     "start_time": "2022-07-05T23:59:20.463735Z"
     }
    },
    "outputs": [
@@ -6104,8 +6104,8 @@
    "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:40.033855Z",
-     "start_time": "2022-07-05T23:32:40.029444Z"
+     "end_time": "2022-07-05T23:59:20.481753Z",
+     "start_time": "2022-07-05T23:59:20.476204Z"
     }
    },
    "outputs": [],
@@ -6118,8 +6118,8 @@
    "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:40.540967Z",
-     "start_time": "2022-07-05T23:32:40.035665Z"
+     "end_time": "2022-07-05T23:59:20.986969Z",
+     "start_time": "2022-07-05T23:59:20.484294Z"
     }
    },
    "outputs": [
@@ -6155,8 +6155,8 @@
    "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-05T23:32:40.553912Z",
-     "start_time": "2022-07-05T23:32:40.543134Z"
+     "end_time": "2022-07-05T23:59:21.000743Z",
+     "start_time": "2022-07-05T23:59:20.988878Z"
     }
    },
    "outputs": [],
