--- a/pandas-cookbook/Untitled.ipynb
+++ b/pandas-cookbook/Untitled.ipynb
@@ -1111,7 +1111,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1125,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
