--- a/Ensemble—cookbook/1—overview.ipynb
+++ b/Ensemble—cookbook/1—overview.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.130323Z",
-     "start_time": "2022-07-06T08:18:50.884847Z"
+     "end_time": "2022-07-06T08:30:59.473909Z",
+     "start_time": "2022-07-06T08:30:58.210067Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.211742Z",
-     "start_time": "2022-07-06T08:18:52.132709Z"
+     "end_time": "2022-07-06T08:30:59.548697Z",
+     "start_time": "2022-07-06T08:30:59.476526Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.216983Z",
-     "start_time": "2022-07-06T08:18:52.214152Z"
+     "end_time": "2022-07-06T08:30:59.553460Z",
+     "start_time": "2022-07-06T08:30:59.550671Z"
     }
    },
    "outputs": [],
@@ -60,8 +60,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.223553Z",
-     "start_time": "2022-07-06T08:18:52.220097Z"
+     "end_time": "2022-07-06T08:30:59.561940Z",
+     "start_time": "2022-07-06T08:30:59.555942Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.230035Z",
-     "start_time": "2022-07-06T08:18:52.225767Z"
+     "end_time": "2022-07-06T08:30:59.570911Z",
+     "start_time": "2022-07-06T08:30:59.563705Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.256567Z",
-     "start_time": "2022-07-06T08:18:52.232231Z"
+     "end_time": "2022-07-06T08:30:59.597490Z",
+     "start_time": "2022-07-06T08:30:59.572811Z"
     }
    },
    "outputs": [],
@@ -106,8 +106,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.328947Z",
-     "start_time": "2022-07-06T08:18:52.258381Z"
+     "end_time": "2022-07-06T08:30:59.680806Z",
+     "start_time": "2022-07-06T08:30:59.599709Z"
     }
    },
    "outputs": [
@@ -1465,8 +1465,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.335010Z",
-     "start_time": "2022-07-06T08:18:52.331385Z"
+     "end_time": "2022-07-06T08:30:59.686487Z",
+     "start_time": "2022-07-06T08:30:59.682873Z"
     }
    },
    "outputs": [
@@ -1490,8 +1490,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.343643Z",
-     "start_time": "2022-07-06T08:18:52.337236Z"
+     "end_time": "2022-07-06T08:30:59.694964Z",
+     "start_time": "2022-07-06T08:30:59.688402Z"
     }
    },
    "outputs": [
@@ -1596,8 +1596,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.537549Z",
-     "start_time": "2022-07-06T08:18:52.347145Z"
+     "end_time": "2022-07-06T08:30:59.880913Z",
+     "start_time": "2022-07-06T08:30:59.698788Z"
     }
    },
    "outputs": [
@@ -2151,8 +2151,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.543995Z",
-     "start_time": "2022-07-06T08:18:52.539451Z"
+     "end_time": "2022-07-06T08:30:59.887915Z",
+     "start_time": "2022-07-06T08:30:59.883372Z"
     }
    },
    "outputs": [],
@@ -2165,8 +2165,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.554250Z",
-     "start_time": "2022-07-06T08:18:52.545991Z"
+     "end_time": "2022-07-06T08:30:59.898033Z",
+     "start_time": "2022-07-06T08:30:59.890066Z"
     }
    },
    "outputs": [
@@ -2194,8 +2194,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.561951Z",
-     "start_time": "2022-07-06T08:18:52.556343Z"
+     "end_time": "2022-07-06T08:30:59.914020Z",
+     "start_time": "2022-07-06T08:30:59.900021Z"
     }
    },
    "outputs": [],
@@ -2208,8 +2208,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.567893Z",
-     "start_time": "2022-07-06T08:18:52.564145Z"
+     "end_time": "2022-07-06T08:30:59.922985Z",
+     "start_time": "2022-07-06T08:30:59.916536Z"
     }
    },
    "outputs": [],
@@ -2222,8 +2222,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.574726Z",
-     "start_time": "2022-07-06T08:18:52.569615Z"
+     "end_time": "2022-07-06T08:30:59.931416Z",
+     "start_time": "2022-07-06T08:30:59.925204Z"
     }
    },
    "outputs": [],
@@ -2236,8 +2236,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.641337Z",
-     "start_time": "2022-07-06T08:18:52.576364Z"
+     "end_time": "2022-07-06T08:30:59.999980Z",
+     "start_time": "2022-07-06T08:30:59.934072Z"
     }
    },
    "outputs": [
@@ -3037,8 +3037,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.646846Z",
-     "start_time": "2022-07-06T08:18:52.643211Z"
+     "end_time": "2022-07-06T08:31:00.006214Z",
+     "start_time": "2022-07-06T08:31:00.002510Z"
     }
    },
    "outputs": [
@@ -3059,8 +3059,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.654498Z",
-     "start_time": "2022-07-06T08:18:52.649009Z"
+     "end_time": "2022-07-06T08:31:00.019348Z",
+     "start_time": "2022-07-06T08:31:00.008147Z"
     }
    },
    "outputs": [
@@ -3099,8 +3099,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.659366Z",
-     "start_time": "2022-07-06T08:18:52.656492Z"
+     "end_time": "2022-07-06T08:31:00.030098Z",
+     "start_time": "2022-07-06T08:31:00.022009Z"
     }
    },
    "outputs": [],
@@ -3113,8 +3113,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.666665Z",
-     "start_time": "2022-07-06T08:18:52.661283Z"
+     "end_time": "2022-07-06T08:31:00.039254Z",
+     "start_time": "2022-07-06T08:31:00.032783Z"
     }
    },
    "outputs": [],
@@ -3127,8 +3127,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.672424Z",
-     "start_time": "2022-07-06T08:18:52.668783Z"
+     "end_time": "2022-07-06T08:31:00.045704Z",
+     "start_time": "2022-07-06T08:31:00.041872Z"
     }
    },
    "outputs": [],
@@ -3141,8 +3141,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.679671Z",
-     "start_time": "2022-07-06T08:18:52.674739Z"
+     "end_time": "2022-07-06T08:31:00.052871Z",
+     "start_time": "2022-07-06T08:31:00.047550Z"
     }
    },
    "outputs": [],
@@ -3155,8 +3155,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.685422Z",
-     "start_time": "2022-07-06T08:18:52.681336Z"
+     "end_time": "2022-07-06T08:31:00.059831Z",
+     "start_time": "2022-07-06T08:31:00.054844Z"
     }
    },
    "outputs": [],
@@ -3169,8 +3169,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.748343Z",
-     "start_time": "2022-07-06T08:18:52.687314Z"
+     "end_time": "2022-07-06T08:31:00.130672Z",
+     "start_time": "2022-07-06T08:31:00.061891Z"
     },
     "scrolled": true
    },
@@ -4529,8 +4529,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.754864Z",
-     "start_time": "2022-07-06T08:18:52.750473Z"
+     "end_time": "2022-07-06T08:31:00.137826Z",
+     "start_time": "2022-07-06T08:31:00.133081Z"
     }
    },
    "outputs": [],
@@ -4543,8 +4543,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.767184Z",
-     "start_time": "2022-07-06T08:18:52.757085Z"
+     "end_time": "2022-07-06T08:31:00.152122Z",
+     "start_time": "2022-07-06T08:31:00.139997Z"
     }
    },
    "outputs": [
@@ -4689,8 +4689,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.775276Z",
-     "start_time": "2022-07-06T08:18:52.769190Z"
+     "end_time": "2022-07-06T08:31:00.160989Z",
+     "start_time": "2022-07-06T08:31:00.153983Z"
     }
    },
    "outputs": [
@@ -4716,8 +4716,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.785936Z",
-     "start_time": "2022-07-06T08:18:52.780637Z"
+     "end_time": "2022-07-06T08:31:00.172719Z",
+     "start_time": "2022-07-06T08:31:00.166826Z"
     }
    },
    "outputs": [
@@ -4745,8 +4745,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.858988Z",
-     "start_time": "2022-07-06T08:18:52.787905Z"
+     "end_time": "2022-07-06T08:31:00.256332Z",
+     "start_time": "2022-07-06T08:31:00.174540Z"
     },
     "scrolled": false
    },
@@ -5560,8 +5560,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.865841Z",
-     "start_time": "2022-07-06T08:18:52.861341Z"
+     "end_time": "2022-07-06T08:31:00.263079Z",
+     "start_time": "2022-07-06T08:31:00.258211Z"
     }
    },
    "outputs": [],
@@ -5574,8 +5574,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.873353Z",
-     "start_time": "2022-07-06T08:18:52.867572Z"
+     "end_time": "2022-07-06T08:31:00.272908Z",
+     "start_time": "2022-07-06T08:31:00.265243Z"
     }
    },
    "outputs": [
@@ -5616,8 +5616,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.879400Z",
-     "start_time": "2022-07-06T08:18:52.874988Z"
+     "end_time": "2022-07-06T08:31:00.280537Z",
+     "start_time": "2022-07-06T08:31:00.274661Z"
     }
    },
    "outputs": [
@@ -5641,8 +5641,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.885442Z",
-     "start_time": "2022-07-06T08:18:52.881210Z"
+     "end_time": "2022-07-06T08:31:00.285571Z",
+     "start_time": "2022-07-06T08:31:00.282726Z"
     }
    },
    "outputs": [],
@@ -5655,8 +5655,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.891613Z",
-     "start_time": "2022-07-06T08:18:52.887137Z"
+     "end_time": "2022-07-06T08:31:00.293357Z",
+     "start_time": "2022-07-06T08:31:00.287652Z"
     }
    },
    "outputs": [],
@@ -5669,8 +5669,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.899076Z",
-     "start_time": "2022-07-06T08:18:52.893388Z"
+     "end_time": "2022-07-06T08:31:00.307410Z",
+     "start_time": "2022-07-06T08:31:00.296769Z"
     }
    },
    "outputs": [
@@ -5694,8 +5694,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.907531Z",
-     "start_time": "2022-07-06T08:18:52.901085Z"
+     "end_time": "2022-07-06T08:31:00.315873Z",
+     "start_time": "2022-07-06T08:31:00.309294Z"
     }
    },
    "outputs": [],
@@ -5708,8 +5708,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.915505Z",
-     "start_time": "2022-07-06T08:18:52.909570Z"
+     "end_time": "2022-07-06T08:31:00.323895Z",
+     "start_time": "2022-07-06T08:31:00.317819Z"
     }
    },
    "outputs": [],
@@ -5722,8 +5722,8 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.929686Z",
-     "start_time": "2022-07-06T08:18:52.917665Z"
+     "end_time": "2022-07-06T08:31:00.337892Z",
+     "start_time": "2022-07-06T08:31:00.326081Z"
     }
    },
    "outputs": [
@@ -5844,8 +5844,8 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.939431Z",
-     "start_time": "2022-07-06T08:18:52.931725Z"
+     "end_time": "2022-07-06T08:31:00.346841Z",
+     "start_time": "2022-07-06T08:31:00.340084Z"
     }
    },
    "outputs": [],
@@ -5858,8 +5858,8 @@
    "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.947307Z",
-     "start_time": "2022-07-06T08:18:52.941517Z"
+     "end_time": "2022-07-06T08:31:00.359933Z",
+     "start_time": "2022-07-06T08:31:00.350549Z"
     }
    },
    "outputs": [
@@ -5965,8 +5965,8 @@
    "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.952658Z",
-     "start_time": "2022-07-06T08:18:52.949637Z"
+     "end_time": "2022-07-06T08:31:00.366763Z",
+     "start_time": "2022-07-06T08:31:00.361886Z"
     }
    },
    "outputs": [],
@@ -5979,8 +5979,8 @@
    "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.959136Z",
-     "start_time": "2022-07-06T08:18:52.954925Z"
+     "end_time": "2022-07-06T08:31:00.384006Z",
+     "start_time": "2022-07-06T08:31:00.368949Z"
     }
    },
    "outputs": [
@@ -6009,8 +6009,8 @@
    "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.964930Z",
-     "start_time": "2022-07-06T08:18:52.960884Z"
+     "end_time": "2022-07-06T08:31:00.390899Z",
+     "start_time": "2022-07-06T08:31:00.386277Z"
     }
    },
    "outputs": [
@@ -6034,8 +6034,8 @@
    "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.975825Z",
-     "start_time": "2022-07-06T08:18:52.966799Z"
+     "end_time": "2022-07-06T08:31:00.406117Z",
+     "start_time": "2022-07-06T08:31:00.392961Z"
     }
    },
    "outputs": [
@@ -6078,8 +6078,8 @@
    "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.980653Z",
-     "start_time": "2022-07-06T08:18:52.978163Z"
+     "end_time": "2022-07-06T08:31:00.411152Z",
+     "start_time": "2022-07-06T08:31:00.408010Z"
     }
    },
    "outputs": [],
@@ -6094,8 +6094,8 @@
    "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:52.999642Z",
-     "start_time": "2022-07-06T08:18:52.982495Z"
+     "end_time": "2022-07-06T08:31:00.433073Z",
+     "start_time": "2022-07-06T08:31:00.413122Z"
     }
    },
    "outputs": [],
@@ -6111,8 +6111,8 @@
    "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.006692Z",
-     "start_time": "2022-07-06T08:18:53.002013Z"
+     "end_time": "2022-07-06T08:31:00.442634Z",
+     "start_time": "2022-07-06T08:31:00.435159Z"
     }
    },
    "outputs": [
@@ -6154,8 +6154,8 @@
    "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.012828Z",
-     "start_time": "2022-07-06T08:18:53.008893Z"
+     "end_time": "2022-07-06T08:31:00.451016Z",
+     "start_time": "2022-07-06T08:31:00.444620Z"
     }
    },
    "outputs": [
@@ -6197,8 +6197,8 @@
    "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.017766Z",
-     "start_time": "2022-07-06T08:18:53.015049Z"
+     "end_time": "2022-07-06T08:31:00.460428Z",
+     "start_time": "2022-07-06T08:31:00.453297Z"
     }
    },
    "outputs": [],
@@ -6211,8 +6211,8 @@
    "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.025208Z",
-     "start_time": "2022-07-06T08:18:53.019614Z"
+     "end_time": "2022-07-06T08:31:00.471096Z",
+     "start_time": "2022-07-06T08:31:00.462157Z"
     }
    },
    "outputs": [
@@ -6240,8 +6240,8 @@
    "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.030376Z",
-     "start_time": "2022-07-06T08:18:53.027180Z"
+     "end_time": "2022-07-06T08:31:00.478271Z",
+     "start_time": "2022-07-06T08:31:00.473555Z"
     }
    },
    "outputs": [],
@@ -6254,8 +6254,8 @@
    "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.484157Z",
-     "start_time": "2022-07-06T08:18:53.032141Z"
+     "end_time": "2022-07-06T08:31:00.935198Z",
+     "start_time": "2022-07-06T08:31:00.480295Z"
     }
    },
    "outputs": [
@@ -6303,8 +6303,8 @@
    "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:53.491233Z",
-     "start_time": "2022-07-06T08:18:53.486374Z"
+     "end_time": "2022-07-06T08:31:00.943746Z",
+     "start_time": "2022-07-06T08:31:00.938571Z"
     }
    },
    "outputs": [],
@@ -6317,8 +6317,8 @@
    "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:54.428949Z",
-     "start_time": "2022-07-06T08:18:53.493706Z"
+     "end_time": "2022-07-06T08:31:01.858134Z",
+     "start_time": "2022-07-06T08:31:00.946799Z"
     }
    },
    "outputs": [
@@ -6356,8 +6356,8 @@
    "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:54.435789Z",
-     "start_time": "2022-07-06T08:18:54.431093Z"
+     "end_time": "2022-07-06T08:31:01.865352Z",
+     "start_time": "2022-07-06T08:31:01.860244Z"
     }
    },
    "outputs": [],
@@ -6371,8 +6371,8 @@
    "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:54.481780Z",
-     "start_time": "2022-07-06T08:18:54.437680Z"
+     "end_time": "2022-07-06T08:31:01.896935Z",
+     "start_time": "2022-07-06T08:31:01.867464Z"
     }
    },
    "outputs": [
@@ -6558,8 +6558,8 @@
    "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:54.845505Z",
-     "start_time": "2022-07-06T08:18:54.485319Z"
+     "end_time": "2022-07-06T08:31:02.261059Z",
+     "start_time": "2022-07-06T08:31:01.899152Z"
     }
    },
    "outputs": [
@@ -6595,8 +6595,8 @@
    "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:54.861136Z",
-     "start_time": "2022-07-06T08:18:54.847737Z"
+     "end_time": "2022-07-06T08:31:02.275907Z",
+     "start_time": "2022-07-06T08:31:02.262920Z"
     }
    },
    "outputs": [],
@@ -6629,8 +6629,50 @@
    "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T08:18:55.183607Z",
-     "start_time": "2022-07-06T08:18:54.863720Z"
+     "end_time": "2022-07-06T08:31:02.294910Z",
+     "start_time": "2022-07-06T08:31:02.278262Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "houseIsnullAny = housePricesData.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T08:31:02.311482Z",
+     "start_time": "2022-07-06T08:31:02.296677Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MasVnrType    8\n",
+       "MasVnrArea    8\n",
+       "Electrical    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housePricesData.loc[:,housePricesData.columns[houseIsnullAny]].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-06T08:31:02.575540Z",
+     "start_time": "2022-07-06T08:31:02.313389Z"
     }
    },
    "outputs": [
@@ -6640,7 +6682,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
